Fixed Line alignment

--- a/src/app/core/products/products-dashboard/products-dashboard.component.scss
+++ b/src/app/core/products/products-dashboard/products-dashboard.component.scss
@@ -80,9 +80,6 @@
     min-height: 100px;
     border-radius: 10px;
   }
-  .item-data {
-      padding-top: 10px;
-  }
   .item-data>p {
       margin: 5px;
   }
